Archive2/b0/b6e236acac1601/output
main.cpp:81:14: error: explicit specialization in non-namespace scope 'class Angle<PRECISION, UNIT>'
     template<>
              ^
